--- a/treecko_frontend/package.json
+++ b/treecko_frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "treecko",
+  "name": "treecko-frontend",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,20 +7,23 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:treecko": "node dist/treecko/server/server.mjs"
+    "serve:ssr:treecko_frontend": "node dist/treecko_frontend/server/server.mjs"
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^19.2.0",
+    "@angular/animations": "^19.2.8",
+    "@angular/cdk": "^19.2.11",
+    "@angular/common": "^19.2.8",
     "@angular/compiler": "^19.2.0",
-    "@angular/core": "^19.2.0",
+    "@angular/core": "^19.2.8",
     "@angular/forms": "^19.2.0",
-    "@angular/platform-browser": "^19.2.0",
+    "@angular/platform-browser": "^19.2.8",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.9",
     "express": "^4.18.2",
+    "localstorage-polyfill": "^1.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
